--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -93,12 +93,14 @@ items:
           href: single-sign-on-saml-protocol.md
         - name: Utloggning
           href: single-sign-out-saml-protocol.md
-        - name: WS-Federation
-          items:
-          - name: Federationsmetadata
-            href: azure-ad-federation-metadata.md
-        - name: Förnyelse av signeringsnyckel
-          href: active-directory-signing-key-rollover.md
+        - name: Så här använder Azure AD SAML-protokoll
+          href: active-directory-saml-protocol-reference.md
+      - name: WS-Federation
+        items:
+        - name: Federationsmetadata
+          href: azure-ad-federation-metadata.md
+      - name: Förnyelse av signeringsnyckel
+        href: active-directory-signing-key-rollover.md
       - name: ID-tokens
         href: id-tokens.md
       - name: Åtkomsttokens
@@ -123,7 +125,7 @@ items:
       - name: Ramverk för medgivande
         href: consent-framework.md
       - name: Upplevelse för programmedgivande
-        href: ../application-consent-experience.md
+        href: application-consent-experience.md
     - name: Villkorlig åtkomst
       href: conditional-access-dev-guide.md
     - name: Nationella moln
@@ -144,9 +146,15 @@ items:
       - name: Konfigurera anspråk
         items:
         - name: Konfigurera rollanspråk
-          href: ../active-directory-enterprise-app-role-management.md
+          href: active-directory-enterprise-app-role-management.md
         - name: Anpassa anspråk
           href: active-directory-saml-claims-customization.md
+        - name: Anpassa anspråk (offentlig förhandsversion)
+          href: active-directory-claims-mapping.md
+        - name: Konfigurera valfria anspråk (offentlig förhandsversion)
+          href: active-directory-optional-claims.md
+        - name: Konfigurera tokenlivslängder (offentlig förhandsversion)
+          href: active-directory-configurable-token-lifetimes.md
       - name: ADAL-regelverk för felhantering
         href: active-directory-devhowto-adal-error-handling.md
     - name: Tillämpningskonfiguration
@@ -196,8 +204,6 @@ items:
       href: active-directory-authentication-libraries.md
     - name: Azure AD Graph API
       href: active-directory-graph-api.md
-    - name: Anspråk i säkerhetstoken för Azure AD
-      href: active-directory-optional-claims.md
     - name: Programmanifest
       href: reference-app-manifest.md
     - name: Autentisering och felkoder vid autentisering
@@ -317,7 +323,7 @@ items:
       - name: Ramverk för medgivande
         href: consent-framework.md
       - name: Upplevelse för programmedgivande
-        href: ../application-consent-experience.md
+        href: application-consent-experience.md
     - name: Nationella moln
       href: authentication-national-cloud.md
   - name: Instruktionsguider
@@ -325,9 +331,17 @@ items:
     - name: Autentisering
       items:
       - name: Konfigurera rollanspråk
-        href: ../active-directory-enterprise-app-role-management.md
+        href: active-directory-enterprise-app-role-management.md
       - name: Anpassa anspråk
         href: active-directory-saml-claims-customization.md
+      - name: Anpassa anspråk (offentlig förhandsversion)
+        href: active-directory-claims-mapping.md
+      - name: Konfigurera valfria anspråk (offentlig förhandsversion)
+        href: active-directory-optional-claims.md
+      - name: Konfigurera tokenlivslängder (offentlig förhandsversion)
+        href: active-directory-configurable-token-lifetimes.md
+      - name: Autentisera med Azure AD och få en JWT-token med OAuth 2.0
+        href: active-directory-protocols-oauth-get-jwt-token.md
     - name: Tillämpningskonfiguration
       items:
       - name: Konvertera en app för en enda klient till en app för flera klienter
@@ -382,9 +396,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterad tjänstidentitet (MSI) för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: 139d80313bb663a45e476e90812ce7772beccc19
-ms.sourcegitcommit: 4edf9354a00bb63082c3b844b979165b64f46286
+ms.openlocfilehash: f7b8ce59f421c2a2c7cdb6269132910bd2b3ab4e
+ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/04/2018
-ms.locfileid: "48785009"
+ms.lasthandoff: 10/10/2018
+ms.locfileid: "48901846"
