--- a/articles/azure-resource-manager/subtoc/toc.yml
+++ b/articles/azure-resource-manager/subtoc/toc.yml
@@ -237,6 +237,9 @@ items:
     - name: Länkade servrar
       href: /azure/templates/Microsoft.Cache/redis/linkedServers
       maintainContext: true
+    - name: Uppdateringsscheman
+      href: /azure/templates/Microsoft.Cache/redis/patchschedules
+      maintainContext: true
     maintainContext: true
 - name: CDN
   items:
@@ -609,6 +612,15 @@ items:
   - name: Komponenter
     href: /azure/templates/Microsoft.insights/components
     maintainContext: true
+  - name: Måttaviseringar
+    href: /azure/templates/microsoft.insights/metricalerts
+    maintainContext: true
+  - name: Gästdiagnostikinställningar
+    href: /azure/templates/microsoft.insights/guestdiagnosticsettings
+    maintainContext: true
+  - name: Schemalagda frågeregler
+    href: /azure/templates/microsoft.insights/scheduledqueryrules
+    maintainContext: true
   - name: Webbtester
     href: /azure/templates/Microsoft.insights/webtests
     maintainContext: true
@@ -661,10 +673,58 @@ items:
   - name: Webbtjänster
     href: /azure/templates/Microsoft.MachineLearning/webServices
     maintainContext: true
+- name: MariaDB
+  items:
+  - name: Servrar
+    href: /azure/templates/microsoft.dbformariadb/servers
+    items:
+    - name: Konfigurationer
+      href: /azure/templates/microsoft.dbformariadb/servers/configurations
+      maintainContext: true
+    - name: Databaser
+      href: /azure/templates/microsoft.dbformariadb/servers/databases
+      maintainContext: true
+    - name: Brandväggsregler
+      href: /azure/templates/microsoft.dbformariadb/servers/firewallrules
+      maintainContext: true
+    - name: Säkerhetsaviseringsprinciper
+      href: /azure/templates/microsoft.dbformariadb/servers/securityalertpolicies
+      maintainContext: true
+    maintainContext: true
 - name: Media
   items:
   - name: Media Services
     href: /azure/templates/Microsoft.Media/mediaservices
+    items:
+    - name: Tillgångar
+      href: /azure/templates/microsoft.media/mediaservices/assets
+      maintainContext: true
+    - name: Viktiga innehållsprinciper
+      href: /azure/templates/microsoft.media/mediaservices/contentkeypolicies
+      maintainContext: true
+    - name: Livehändelser
+      href: /azure/templates/microsoft.media/mediaservices/liveevents
+      items:
+      - name: Liveutdata
+        href: /azure/templates/microsoft.media/mediaservices/liveevents/liveoutputs
+        maintainContext: true
+      maintainContext: true
+    - name: Slutpunkter för direktuppspelning
+      href: /azure/templates/microsoft.media/mediaservices/streamingendpoints
+      maintainContext: true
+    - name: Positionerare för direktuppspelning
+      href: /azure/templates/microsoft.media/mediaservices/streaminglocators
+      maintainContext: true
+    - name: Principer för direktuppspelning
+      href: /azure/templates/microsoft.media/mediaservices/streamingpolicies
+      maintainContext: true
+    - name: Transformering
+      href: /azure/templates/microsoft.media/mediaservices/transforms
+      items:
+      - name: Jobb
+        href: /azure/templates/microsoft.media/mediaservices/transforms/jobs
+        maintainContext: true
+      maintainContext: true
     maintainContext: true
 - name: MySQL
   items:
@@ -1040,6 +1100,9 @@ items:
     - name: Konfigurationer av haveriberedskap
       href: /azure/templates/Microsoft.ServiceBus/namespaces/disasterRecoveryConfigs
       maintainContext: true
+    - name: Migreringskonfigurationer
+      href: /azure/templates/Microsoft.ServiceBus/namespaces/migrationconfigurations
+      maintainContext: true
     - name: Köer
       href: /azure/templates/Microsoft.ServiceBus/namespaces/queues
       items:
@@ -1066,6 +1129,17 @@ items:
   items:
   - name: Kluster
     href: /azure/templates/Microsoft.ServiceFabric/clusters
+    maintainContext: true
+- name: Service Fabric Mesh
+  items:
+  - name: Program
+    href: /azure/templates/microsoft.servicefabricmesh/applications
+    maintainContext: true
+  - name: Nätverk
+    href: /azure/templates/microsoft.servicefabricmesh/networks
+    maintainContext: true
+  - name: Volymer
+    href: /azure/templates/microsoft.servicefabricmesh/volumes
     maintainContext: true
 - name: SQL
   items:
@@ -1359,9 +1433,9 @@ items:
         maintainContext: true
       maintainContext: true
     maintainContext: true
-ms.openlocfilehash: 47f6e2d53e2bb7de5b1be13de03cb5378be96948
-ms.sourcegitcommit: 3150596c9d4a53d3650cc9254c107871ae0aab88
+ms.openlocfilehash: ca2143fbe061561b27f8d8f6f0181820181634a0
+ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47419720"
+ms.lasthandoff: 10/10/2018
+ms.locfileid: "48902662"
