--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -343,6 +343,8 @@ items:
       href: compute-linked-services.md
   - name: Kontrollflöde
     items:
+    - name: Lägga till variabelaktivitet
+      href: control-flow-append-variable-activity.md
     - name: Köra pipelineaktivitet
       href: control-flow-execute-pipeline-activity.md
     - name: Filteraktivitet
@@ -355,6 +357,8 @@ items:
       href: control-flow-if-condition-activity.md
     - name: Sökningsaktivitet
       href: control-flow-lookup-activity.md
+    - name: Ange variabelaktivitet
+      href: control-flow-set-variable-activity.md
     - name: Tills-aktivitet
       href: control-flow-until-activity.md
     - name: Vänteaktivitet
@@ -461,9 +465,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 9231e089802ebf9bd0a6df4a123f59b10552123a
-ms.sourcegitcommit: 6f59cdc679924e7bfa53c25f820d33be242cea28
+ms.openlocfilehash: 7a6734c34acc91a602840c554c5204cbc722c910
+ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/05/2018
-ms.locfileid: "48815944"
+ms.lasthandoff: 10/10/2018
+ms.locfileid: "48901829"
