--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -1,5 +1,5 @@
 items:
-- name: Uppstarten av den virtuella datorn fastnar i läget "Förbereder Windows. Stäng inte av datorn”.
+- name: VM-uppstarten har fastnat
   href: troubleshoot-vm-boot-configure-update.md
 - name: Felsöka virtuella Azure-datorer
   href: index.md
@@ -119,9 +119,9 @@ items:
   href: troubleshoot-vm-by-use-nested-virtualization.md
 - name: Förstå en omstart av systemet
   href: understand-vm-reboot.md
-ms.openlocfilehash: 088840fcab2ae9d47098d9d2f06af87b88c93e4e
-ms.sourcegitcommit: 67abaa44871ab98770b22b29d899ff2f396bdae3
+ms.openlocfilehash: a4b8d8f089c17ec101e334afa62abc5d040bce46
+ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/08/2018
-ms.locfileid: "48857456"
+ms.lasthandoff: 10/10/2018
+ms.locfileid: "48901325"
