--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -149,11 +149,11 @@ items:
           href: active-directory-enterprise-app-role-management.md
         - name: Anpassa anspråk
           href: active-directory-saml-claims-customization.md
-        - name: Anpassa anspråk (offentlig förhandsversion)
+        - name: Anpassa anspråk (förhandsversion)
           href: active-directory-claims-mapping.md
-        - name: Konfigurera valfria anspråk (offentlig förhandsversion)
+        - name: Konfigurera valfria anspråk (förhandsversion)
           href: active-directory-optional-claims.md
-        - name: Konfigurera tokenlivslängder (offentlig förhandsversion)
+        - name: Konfigurera livslängd för token (förhandsversion)
           href: active-directory-configurable-token-lifetimes.md
       - name: ADAL-regelverk för felhantering
         href: active-directory-devhowto-adal-error-handling.md
@@ -303,6 +303,8 @@ items:
           href: v2-oauth2-on-behalf-of-flow.md
         - name: Beviljande av autentiseringsuppgifter för OAuth 2.0-klient
           href: v2-oauth2-client-creds-grant-flow.md
+        - name: Kodflöde för OAuth 2.0-enhet
+          href: v2-oauth2-device-code.md
       - name: ID-tokens
         href: id-tokens.md
       - name: Åtkomsttokens
@@ -334,11 +336,11 @@ items:
         href: active-directory-enterprise-app-role-management.md
       - name: Anpassa anspråk
         href: active-directory-saml-claims-customization.md
-      - name: Anpassa anspråk (offentlig förhandsversion)
+      - name: Anpassa anspråk (förhandsversion)
         href: active-directory-claims-mapping.md
-      - name: Konfigurera valfria anspråk (offentlig förhandsversion)
+      - name: Konfigurera valfria anspråk (förhandsversion)
         href: active-directory-optional-claims.md
-      - name: Konfigurera tokenlivslängder (offentlig förhandsversion)
+      - name: Konfigurera livslängd för token (förhandsversion)
         href: active-directory-configurable-token-lifetimes.md
       - name: Autentisera med Azure AD och få en JWT-token med OAuth 2.0
         href: active-directory-protocols-oauth-get-jwt-token.md
@@ -396,9 +398,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterad tjänstidentitet (MSI) för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: f7b8ce59f421c2a2c7cdb6269132910bd2b3ab4e
-ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
+ms.openlocfilehash: 93161f9886541147254bc15ade9b51efd5c003f0
+ms.sourcegitcommit: 4b1083fa9c78cd03633f11abb7a69fdbc740afd1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 10/10/2018
-ms.locfileid: "48901846"
+ms.locfileid: "49079308"
