--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -1,6 +1,4 @@
 items:
-- name: VM-uppstarten har fastnat
-  href: troubleshoot-vm-boot-configure-update.md
 - name: Felsöka virtuella Azure-datorer
   href: index.md
 - name: Allokeringsfel
@@ -113,15 +111,19 @@ items:
     href: troubleshoot-check-disk-boot-error.md
   - name: Fel som visar en blå kraschskärm
     href: troubleshoot-common-blue-screen-error.md
+  - name: VM-uppstarten har fastnat
+    href: troubleshoot-vm-boot-configure-update.md
+  - name: Viktig tjänst misslyckades
+    href: troubleshoot-critical-service-failed-boot-error.md
 - name: Begränsningsfel
   href: troubleshooting-throttling-errors.md
 - name: Använd kapslad virtualisering
   href: troubleshoot-vm-by-use-nested-virtualization.md
 - name: Förstå en omstart av systemet
   href: understand-vm-reboot.md
-ms.openlocfilehash: a4b8d8f089c17ec101e334afa62abc5d040bce46
-ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
+ms.openlocfilehash: a2ef58c999d2d438a23fb9e3fd214c6bf677de00
+ms.sourcegitcommit: 7b0778a1488e8fd70ee57e55bde783a69521c912
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 10/10/2018
-ms.locfileid: "48901325"
+ms.locfileid: "49067418"
