--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -60,8 +60,6 @@ items:
       href: concepts-servers.md
     - name: Versioner som stöds
       href: concepts-supported-versions.md
-    - name: Serverloggar
-      href: concepts-server-logs.md
     - name: Hög tillgänglighet
       href: concepts-high-availability.md
   - name: Resurser
@@ -85,7 +83,11 @@ items:
     - name: Säkerhetskopiering och återställning
       href: concepts-backup.md
   - name: Övervaka
-    href: concepts-monitoring.md
+    items:
+    - name: Övervaka
+      href: concepts-monitoring.md
+    - name: Serverloggar
+      href: concepts-server-logs.md
   - name: Utveckling
     items:
     - name: Kompatibilitet för drivrutiner och verktyg
@@ -212,9 +214,9 @@ items:
     href: partners-migration-mysql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: c4ce15c7c6260b179bf54f7f8bd78fcee735e3ac
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.openlocfilehash: fa76f131e0dc968d4ae8f0da76f0b38ba4608c05
+ms.sourcegitcommit: 4eddd89f8f2406f9605d1a46796caf188c458f64
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47036872"
+ms.lasthandoff: 10/11/2018
+ms.locfileid: "49115780"
