--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -81,6 +81,17 @@ items:
       href: iot-accelerators-remote-monitoring-deploy-simulated-device.md
     - name: Anpassa användargränssnittet
       href: iot-accelerators-remote-monitoring-customize.md
+      items:
+      - name: Lägg till en sida
+        href: iot-accelerators-remote-monitoring-customize-page.md
+      - name: Lägg till en tjänst
+        href: iot-accelerators-remote-monitoring-customize-service.md
+      - name: Lägg till ett rutnät
+        href: iot-accelerators-remote-monitoring-customize-grid.md
+      - name: Lägg till ett utfällbart objekt
+        href: iot-accelerators-remote-monitoring-customize-flyout.md
+      - name: Lägg till en panel
+        href: iot-accelerators-remote-monitoring-customize-panel.md
     - name: Anpassa och distribuera om en mikrotjänst
       href: iot-accelerators-microservices-example.md
     - name: Distribuera användningen av CLI
@@ -201,9 +212,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Utbildningsväg för IoT-lösningsacceleratorer
     href: https://azure.microsoft.com/documentation/learning-paths/iot-suite/
-ms.openlocfilehash: f0efa66bd9ed85ed4ab79f5937355bd19c404a64
-ms.sourcegitcommit: 55952b90dc3935a8ea8baeaae9692dbb9bedb47f
+ms.openlocfilehash: ff8e7cea540fcb722b5cc68bd811acaec3fac070
+ms.sourcegitcommit: 4047b262cf2a1441a7ae82f8ac7a80ec148c40c4
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/09/2018
-ms.locfileid: "48884351"
+ms.lasthandoff: 10/11/2018
+ms.locfileid: "49091733"
