--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5403be527e8591f0f0b658131b08632d6d1458ca
-ms.sourcegitcommit: f31bfb398430ed7d66a85c7ca1f1cc9943656678
+ms.openlocfilehash: f7b1213b7c3a6074f85c74825ed30c0b7ba8b98b
+ms.sourcegitcommit: 4eddd89f8f2406f9605d1a46796caf188c458f64
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47452249"
+ms.lasthandoff: 10/11/2018
+ms.locfileid: "49116010"
 documentType: LandingData
 title: Dokumentation om Azure Machine Learning-tjänst (förhandsversion)
 metadata:
@@ -44,13 +44,15 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du konfigurerar ett experiment och operationaliserar modeller.
+    text: '<b>Självstudier</b>: Lär dig hur du konfigurerar ett experiment och operationaliserar modeller.'
   - type: list
     style: unordered
     items:
     - html: <a href="tutorial-train-models-with-aml">Träna en egen maskininlärningsmodell</a>
     - html: <a href="tutorial-auto-train-models">Låt oss generera och finjustera en modell automatiskt åt dig</a>
     - html: <a href="tutorial-deploy-models-with-aml">Distribuera en modell som en webbtjänst</a>
+  - type: paragraph
+    text: '<b>Exempelanteckningsböcker</b>: Utforska Azure Machine Learning med <a href="http://aka.ms/aml-notebooks">dessa Jupyter Notebooks</a>, som finns på GitHub.'
 - title: Referens
   items:
   - type: list
